--- a/talarlista.cabal
+++ b/talarlista.cabal
@@ -29,6 +29,6 @@ executable talarlista
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.15.0.0, containers, ansi-terminal, megaparsec, extra
+    build-depends:    base ^>=4.15.0.0, containers, ansi-terminal, megaparsec, extra, directory
     hs-source-dirs:   app
     default-language: Haskell2010
