--- a/talarlista.cabal
+++ b/talarlista.cabal
@@ -1,6 +1,6 @@
 cabal-version:      2.4
 name:               talarlista
-version:            0.1.0.0
+version:            0.2.0.0
 
 -- A short (one-line) description of the package.
 -- synopsis:
@@ -29,7 +29,7 @@ executable talarlista
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.15.0.0, containers, ansi-terminal, megaparsec, extra, directory
+    build-depends:    base >= 4.11.0.0, containers, ansi-terminal, megaparsec, extra, directory
     hs-source-dirs:   app
     default-language: Haskell2010
 
